# datastore-client

./: README.md  client.py  pyproject.toml
.github/: dependabot.yml
datastore_client/: client.py  mock_client.py  utils.py
github/: dependabot.yml
