[tool.poetry]
name = "datastore_client"
version = "0.0.1"
description = "A simple Google DataStore client"
authors = ["Jethro Muller <git@jethromuller.co.za>"]
readme = "README.md"
repository = "https://github.com/Flickswitch/datastore-client"
homepage = "https://github.com/Flickswitch/datastore-client"

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-datastore = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
