[tool.poetry]
name = "datastore_client"
version = "0.0.7"
description = "A simple Google DataStore client"
authors = ["Jethro Muller <git@jethromuller.co.za>"]
readme = "README.md"
repository = "https://github.com/Flickswitch/datastore-client"
homepage = "https://github.com/Flickswitch/datastore-client"

[tool.poetry.dependencies]
python = "^3.6"
google-cloud-datastore = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
